--- a/firststyle.html
+++ b/firststyle.html
@@ -22,18 +22,23 @@
         <div id="webaim"></div>
       </aside>
       <div class="main">
+        <div class="row header">
+          <div class="branding">
+            <h1>Dashboard</h1>
+          </div>
+          <nav>
+            <a href="#">Overview</a>
+            <a href="#">Tasks</a>
+            <a href="#">Stories</a>
+            <a href="#">Admin</a>
+          </nav>
+        </div>
         <div class="row">
           <section>
-            <nav>
-              <a href="#">Overview</a>
-              <a href="#">Tasks</a>
-              <a href="#">Stories</a>
-              <a href="#">Admin</a>
-            </nav>
             <div class="buffer">
               <table>
                 <caption>
-                  Task Overview
+                  <h2>Task Overview</h2>
                 </caption>
                 <thead>
                   <tr>
