this should meet the requirements

--- a/firststyle.html
+++ b/firststyle.html
@@ -21,7 +21,7 @@
         <div id="css-validator"></div>
         <div id="webaim"></div>
       </aside>
-      <div class="main">
+      <div id="main">
         <div class="row header">
           <div class="branding">
             <h1>Dashboard</h1>
@@ -35,7 +35,7 @@
         </div>
         <div class="row">
           <section>
-            <div class="buffer">
+            <div id="buffer">
               <table>
                 <caption>
                   <h2>Task Overview</h2>
